# eopfiles

./: .flake8  .gitignore  .xsdata.xml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  tox.ini
eopfiles/: __init__.py  aux_orbres.py  basic.py  common.py  exceptions.py  headers.py  mpl_orbpre.py  orbits.py  orbres.py  orbres1.py  orbres2.py  orbres3.py  times.py
tests/: conftest.py  test_aux_orbres.py  test_basic.py  test_mpl_orbpre.py  test_orbits.py  test_orbres.py
tests/data/: S1A_TEST_AUX_ORBRES_20140611T105116_20140611T110016_0004.EOF
tests/test_aux_orbres/: CS_TEST_AUX_ORBRES_20100616T175926_20100616T180826_0007.EEF  MA1_TEST_AUX_ORBRES_20210610T050853_20210610T051753_0001.EOF
tests/test_mpl_orbpre/: CS_TEST_MPL_ORBPRE_20100409T105738_20100410T015421_0007.EEF  S1A_TEST_MPL_ORBPRE_20140404T183104_20140405T091945_0004.EOF
